[package]
name = "webber"
description = "A spider themed web building game."
version = "0.0.0"
authors = ["Zefira Shannon"]
repository = "https://github.com/RadicalZephyr/webber"
license = "Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.9", features = ["dynamic"] }

[patch.crates-io]
# We can override the bevy version with remote or local versions
# This method causes less pain to downstream users trying to work off your revisions
#bevy = { git = "https://github.com/bevyengine/bevy" }
#bevy = { path = "../bevy" }

[dev-dependencies]
criterion = "0.3"
# We can use a different feature set of Bevy for our library vs our examples and tests
bevy = { version = "0.9", default-features = false}


[[bench]]
name = "entity_spawning"
path = "benches/entity_spawning.rs"
harness = false
