[package]
name = "webber"
description = "A spider themed web building game."
version = "0.0.0"
authors = ["Zefira Shannon"]
repository = "https://github.com/RadicalZephyr/webber"
license = "Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.9", features = ["dynamic"] }

##  2D Rendering

# bevy_framepace = "0.11.0"
# bevy-parallax = "0.3.0"
# bevy_interact_2d = "0.9.0"
# bevy_pancam = "0.7.0"
# bevy_rapier_collider_gen = "0.1.1"

## Asset Loading

# bevy_asset_loader = "0.14.1"
# bevy_proto = "0.6.0" # Create entities from config files
# iyes_scene_tools = "0.2.0"
# iyes_progress = "0.7.1"

## Accessibility

# bevy_fluent = "0.5.0"
# bevy_color_blindness = "0.2.0" # not compatible with bevy 0.9

[patch.crates-io]
# We can override the bevy version with remote or local versions
# This method causes less pain to downstream users trying to work off your revisions
#bevy = { git = "https://github.com/bevyengine/bevy" }
#bevy = { path = "../bevy" }

[dev-dependencies]
criterion = "0.3"
# We can use a different feature set of Bevy for our library vs our examples and tests
bevy = { version = "0.9", default-features = false}


[[bench]]
name = "entity_spawning"
path = "benches/entity_spawning.rs"
harness = false
